--- a/CafeTracker/Info.plist
+++ b/CafeTracker/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allows you to add photos of awesome coffees!</string>
 </dict>
 </plist>
